--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,12 +1,16 @@
 name: Python Package using Conda
 
-on: [push]
+on:
+    push:
+    branches: [ master ]
+    pull_request:
+    branches: [ master ]
 
 jobs:
   build-linux:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
+      max-parallel: 1
 
     steps:
     - uses: actions/checkout@v2
