--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,10 +1,6 @@
 name: Python Package using Conda
 
-on:
-    push:
-    branches: [ master ]
-    pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build-linux:
