--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,11 @@ site_description: Geographic Masking Python Package
 site_url: https://github.com/thetinhat/maskmypy
 
 theme:
-    name: 'material'
-    logo: assets/logo.png
-    favicon: assets/favicon.ico
-    site_url: github.com/thetinhat/maskmypy
-    palette:
+    # name: 'material'
+    # logo: assets/logo.png
+    # favicon: assets/favicon.ico
+    # site_url: github.com/thetinhat/maskmypy
+    # palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
