--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build pytest
+        pip install -r requirements.txt
     - name: Build package
       run: python -m build
     - name: Test package
