--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -1,8 +1,8 @@
-name: Build & Upload Python Package
+name: Test Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: ['**']
 
 jobs:
   deploy:
@@ -16,14 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build pytest
+        pip install pytest
         pip install -r requirements.txt
-    - name: Build package
-      run: python -m build
     - name: Test package
       run: pytest
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
