--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build pytest
+        pip install build pytest pip-audit
+        pip-audit -r requirements.txt
         pip install -r requirements.txt
     - name: Build package
       run: python -m build
