--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,11 @@ site_description: Geographic Masking Python Package
 site_url: https://github.com/thetinhat/maskmypy
 
 theme:
-    # name: 'material'
+    name: 'material'
     # logo: assets/logo.png
     # favicon: assets/favicon.ico
-    # site_url: github.com/thetinhat/maskmypy
-    # palette:
+    site_url: https://swanlund.space/MaskMyPy/
+    palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
@@ -21,7 +21,7 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: deep orange
+      primary: deep gray
       # accent: blue
       toggle:
         icon: material/toggle-switch
