--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,11 @@
 site_name: MaskMyPy Documentation
 site_description: Geographic Masking Python Package
-site_url: https://github.com/thetinhat/maskmypy
-
+site_url: https://maskmypy.swanlund.dev/
 theme:
     name: 'material'
     # logo: assets/logo.png
     # favicon: assets/favicon.ico
-    site_url: https://swanlund.dev/maskmypy
+    site_url: https://maskmypy.swanlund.dev/
     palette:
 
     # Light mode
@@ -22,7 +21,7 @@ theme:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: deep gray
-      # accent: blue
+      accent: light blue
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
