--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,20 +11,9 @@ theme:
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: deep gray
-      # accent:
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
+      primary: teal
+      accent: teal
 
-    # Dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: light gray
-      accent: light blue
-      toggle:
-        icon: material/toggle-switch
-        name: Switch to light mode
 
 # Extensions
 markdown_extensions:
