fine-tune github actions

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - master
       - main
+    paths:
+    - docs
+    - mkdocs.yml
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
