--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: MaskMyPy Documentation
 site_description: Geographic Masking Python Package
-site_url: https://maskmypy.swanlund.dev/
+site_url: https://thetinhat.github.io/MaskMyPy/
 theme:
     name: 'material'
     # logo: assets/logo.png
     # favicon: assets/favicon.ico
-    site_url: https://maskmypy.swanlund.dev/
+    site_url: https://thetinhat.github.io/MaskMyPy/
     palette:
       scheme: default
       primary: teal
