ci: Only build docs site for main branch

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,7 +2,8 @@ name: Build and Publish Docs
 on:
   push:
     branches:
-      - cli
+      - master
+      - main
     paths:
     - 'docs/**'
     - 'mkdocs.yml'
