build: Use beta branch for docs

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,8 +2,7 @@ name: Build and Publish Docs
 on:
   push:
     branches:
-      - master
-      - main
+      - beta
     paths:
     - 'docs/**'
     - 'mkdocs.yml'
