--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -22,6 +22,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        pip install -r requirements.txt
+        pip install -e .
     - name: Test package
       run: pytest
