--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,11 @@ markdown_extensions:
   - footnotes
   - toc:
       permalink: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 
 plugins:
   - search
