--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
 commonmark==0.9.1
+contextily==1.2.0
 cycler==0.11.0
 cyclonedx-python-lib==2.7.0
 Fiona==1.8.21
