--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install build pytest pip-audit
         pip-audit -r requirements.txt
-        pip install -r requirements.txt
+        pip install -e .[extra]
     - name: Build package
       run: python -m build
     - name: Test package
