refactor: Lots of changes, see description Remove parallel processing Move seed into base class Add CLI for donut and street Set up mkdocs docstring

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,12 @@ markdown_extensions:
 plugins:
   - search
   - roamlinks
+  - mkdocstrings:
+      handlers:
+        python:
+          selection:
+            docstring_style: numpy
+          paths: [.]
   - git-revision-date-localized:
       timezone: America/Vancouver
 
