--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,7 +17,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material
-      - run: pip install mkdocs-roamlinks-plugin
-      - run: pip install mkdocs-git-revision-date-localized-plugin
+      - run: pip install mkdocs-material mkdocs-roamlinks-plugin mkdocs-git-revision-date-localized-plugin mkdocstrings-python
       - run: mkdocs gh-deploy --force
