--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,10 +23,12 @@ plugins:
       handlers:
         python:
           selection:
+            show_root_heading: false
             docstring_style: numpy
             show_source: false
             merge_init_into_class: true
             docstring_section_style: list
+            heading_level: 3
             line_length: 99
           paths: [.]
   - git-revision-date-localized:
