Move validation tests to separate file

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,6 @@
 testpaths =
     tests/test_atlas.py
     tests/test_masks.py
+    tests/test_validation.py
     ; tests/unit_tests.py
     ; tests/extended_tests.py
