Add street mask

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 testpaths =
     tests/test_atlas.py
-    tests/test_masks.py
+    tests/test_donut.py
+    tests/test_street.py
     tests/test_validation.py
-    ; tests/unit_tests.py
+    ; tests/old/unit_tests.py
     ; tests/extended_tests.py
