--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pip-audit==2.4.3
 pip-requirements-parser==31.2.0
 platformdirs==2.5.2
 pluggy==1.0.0
+psutil==5.9.4
 py==1.11.0
 Pygments==2.12.0
 pyparsing==3.0.9
