--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ testpaths =
     tests/test_atlas.py
     tests/test_donut.py
     tests/test_street.py
-    tests/test_validation.py
+    ; tests/test_validation.py
     ; tests/old/unit_tests.py
     ; tests/extended_tests.py
 
