Add typing, refactor donut and street helpers

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 testpaths =
     ; tests/test_analyst.py
-    tests/test_voronoi.py
-    ; tests/test_atlas.py
+    ; tests/test_voronoi.py
+    tests/test_atlas.py
     ; tests/test_donut.py
     ; tests/test_street.py
     ; tests/test_validation.py
