--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,10 @@
 [pytest]
 testpaths =
-    ; tests/test_analyst.py
+    tests/test_analyst.py
     tests/test_voronoi.py
     tests/test_atlas.py
-    ; tests/test_donut.py
+    tests/test_donut.py
     tests/test_street.py
-    ; tests/test_validation.py
     ; tests/old/unit_tests.py
     ; tests/extended_tests.py
 
