--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 testpaths =
-    tests/test_analyst.py
+    tests/test_locationswap.py
+    ; tests/test_analyst.py
     ; tests/test_voronoi.py
     ; tests/test_atlas.py
     ; tests/test_donut.py
