--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,12 @@
 [pytest]
 testpaths =
+    ; tests/test_locationswap.py
+    ; tests/test_analyst.py
     tests/test_atlas.py
-    tests/test_locationswap.py
-    tests/test_analyst.py
-    tests/test_voronoi.py
-    tests/test_donut.py
-    tests/test_street.py
+
+    ; tests/test_voronoi.py
+    ; tests/test_donut.py
+    ; tests/test_street.py
     ; tests/old/unit_tests.py
     ; tests/extended_tests.py
 
