can I get another rewrite lets gooooo

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,13 +2,16 @@
 testpaths =
     ; tests/test_locationswap.py
     ; tests/test_analyst.py
-    tests/test_atlas.py
-
+    ; tests/test_atlas.py
+    tests/test_manager.py
     ; tests/test_voronoi.py
     ; tests/test_donut.py
     ; tests/test_street.py
     ; tests/old/unit_tests.py
     ; tests/extended_tests.py
+
+filterwarnings =
+    ignore::DeprecationWarning
 
 markers =
     slow:
