Improve session handling, add mask method

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,8 @@ testpaths =
     ; tests/old/unit_tests.py
     ; tests/extended_tests.py
 
+norecursedirs = docs .vscode cache env *.egg-info .git
+
 filterwarnings =
     ignore::DeprecationWarning
 
