--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ norecursedirs = docs .vscode cache env *.egg-info .git
 
 filterwarnings =
     ignore::DeprecationWarning
+    ignore::FutureWarning
 
 markers =
     slow:
