--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,12 @@
 [pytest]
 testpaths =
-    ; tests/test_locationswap.py
-    ; tests/test_analyst.py
-    ; tests/test_voronoi.py
-    ; tests/test_donut.py
-    ; tests/test_street.py
-    ; tests/old/unit_tests.py
-    ; tests/extended_tests.py
     tests/test_manager.py
+    ; tests/test_analysis.py
+    ; tests/test_tools.py
+    ; tests/masks/test_donut.py
+    ; tests/masks/test_street.py
+    ; tests/masks/test_voronoi.py
+    ; tests/masks/test_locationswap.py
 
 norecursedirs = docs .vscode cache env *.egg-info .git
 
