--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 testpaths =
-    tests/test_manager.py
+    tests/test.py
+    ; tests/test_manager.py
     ; tests/test_analysis.py
     ; tests/test_tools.py
     ; tests/masks/test_donut.py
