--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths =
-    tests/test.py
+    tests/test_atlas.py
     ; tests/test_manager.py
     ; tests/test_analysis.py
     ; tests/test_tools.py
