Enable analysis tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 testpaths =
-    tests/test_atlas.py
+    ; tests/test_atlas.py
     ; tests/test_manager.py
-    ; tests/test_analysis.py
+    tests/test_analysis.py
     ; tests/test_tools.py
     ; tests/masks/test_donut.py
     ; tests/masks/test_street.py
