Add snap_to_streets option to donut mask, test snap_to_streets function, update Atlas tests to account for snap_to_streets

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths =
     tests/test_atlas.py
     ; tests/test_manager.py
     tests/test_analysis.py
-    ; tests/test_tools.py
+    tests/test_tools.py
     ; tests/masks/test_donut.py
     ; tests/masks/test_street.py
     ; tests/masks/test_voronoi.py
