Refactor street and add tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,10 @@
 [pytest]
 testpaths =
+    tests/masks/test_donut.py
+    tests/masks/test_street.py
     tests/test_atlas.py
-    ; tests/test_manager.py
     tests/test_analysis.py
     tests/test_tools.py
-    ; tests/masks/test_donut.py
-    ; tests/masks/test_street.py
     ; tests/masks/test_voronoi.py
     ; tests/masks/test_locationswap.py
 
