Enable all tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,13 @@
 testpaths =
     tests/masks/test_donut.py
     tests/masks/test_street.py
-    tests/test_atlas.py
+    tests/masks/test_voronoi.py
+    tests/masks/test_locationswap.py
+
     tests/test_analysis.py
     tests/test_tools.py
-    ; tests/masks/test_voronoi.py
-    ; tests/masks/test_locationswap.py
+
+    tests/test_atlas.py
 
 norecursedirs = docs .vscode cache env *.egg-info .git
 
