--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,8 +28,8 @@ plugins:
             show_source: true
             docstring_style: numpy
             docstring_section_style: table
-            show_root_heading: false
-            show_root_members_full_path: true
+            show_root_heading: true
+            show_root_members_full_path: false
             show_root_toc_entry: false
             show_symbol_type_toc: true
             show_symbol_type_heading: true
