--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,7 +2,7 @@ name: Build and Publish Docs
 on:
   push:
     branches:
-      - beta
+      - master
     paths:
       - "docs/**"
       - "mkdocs.yml"
