MaskMyPy rewrite beta (#12)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,16 @@
 [pytest]
 testpaths =
-    tests/tests.py
+    tests/masks/test_donut.py
+    tests/masks/test_street.py
+    tests/masks/test_voronoi.py
+    tests/masks/test_locationswap.py
+
+    tests/test_analysis.py
+    tests/test_tools.py
+
+    tests/test_atlas.py
+
+norecursedirs = docs .vscode cache env *.egg-info .git
+
+markers =
+    slow:
