--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,37 +2,39 @@ site_name: MaskMyPy Documentation
 site_description: Geographic Masking Python Package
 site_url: https://thetinhat.github.io/MaskMyPy/
 theme:
-    name: 'material'
-    # logo: assets/logo.png
-    # favicon: assets/favicon.ico
-    site_url: https://thetinhat.github.io/MaskMyPy/
-    palette:
-      scheme: default
-      primary: teal
-      accent: teal
-
-
-# Extensions
+  name: "material"
+  site_url: https://thetinhat.github.io/MaskMyPy/
+  logo: assets/python_logo.png
+watch:
+  - maskmypy
+  - mkdocs.yml
+  - docs
 markdown_extensions:
   - footnotes
-  # - attr_list
-  # - pymdownx.arithmatex
-  # - pymdownx.superfences
-  # - pymdownx.details
-  # - pymdownx.magiclink
-  # - pymdownx.tasklist:
-  #     custom_checkbox: true
-#  - pymdownx.emoji:
-#      emoji_generator: !!python/name:pymdownx.emoji.to_svg
-  # - admonition
   - toc:
       permalink: true
-
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 plugins:
   - search
   - roamlinks
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            show_source: true
+            docstring_style: numpy
+            docstring_section_style: table
+            show_root_heading: true
+            show_root_members_full_path: false
+            show_root_toc_entry: false
+            show_symbol_type_toc: true
+            show_symbol_type_heading: true
+            heading_level: 3
   - git-revision-date-localized:
       timezone: America/Vancouver
-
 extra_css:
-  - assets/css/extra.css
+  - assets/style.css
