--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,12 +14,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build pytest pip-audit
+          pip install build pytest
           pip install -e .[extra,develop]
       - name: Build package
         run: python -m build
-      - name: Audit package
-        run: pip-audit
       - name: Test package
         run: pytest
       - name: Publish package
